[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["guilhermedeandrade <guilherme.de.andrade@viz.ai>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.4"

[tool.poe.tasks]
dev = "uvicorn main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
